[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/UI.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/gameOver.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/restart_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/restart_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/loadingScreen.png" type="Texture" id=5]
[ext_resource path="res://assets/finalScoreComplete.png" type="Texture" id=6]
[ext_resource path="res://assets/finalScoreFailed.png" type="Texture" id=7]
[ext_resource path="res://assets/hat.png" type="Texture" id=8]
[ext_resource path="res://assets/stickman/legs_11.png" type="Texture" id=9]
[ext_resource path="res://assets/stickman/torso_11.png" type="Texture" id=10]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -610.5
margin_right = 610.5
margin_bottom = 64.0
alignment = 1

[node name="gameOver" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -150.0
margin_right = 350.0
margin_bottom = 150.0
texture = ExtResource( 2 )

[node name="restartButton" type="TextureButton" parent="gameOver"]
margin_left = 216.352
margin_top = 222.463
margin_right = 516.352
margin_bottom = 302.463
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="loadingScreen" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="endScreenComplete" type="TextureRect" parent="."]
editor/display_folded = true
visible = false
margin_left = 423.077
margin_top = 48.9735
margin_right = 923.077
margin_bottom = 648.974
texture = ExtResource( 6 )

[node name="restartButton2" type="TextureButton" parent="endScreenComplete"]
margin_left = 91.9209
margin_top = 498.046
margin_right = 391.921
margin_bottom = 578.046
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="endScreenFailed" type="TextureRect" parent="."]
editor/display_folded = true
visible = false
margin_left = 423.077
margin_top = 48.9735
margin_right = 923.077
margin_bottom = 648.974
texture = ExtResource( 7 )

[node name="hat" type="Sprite" parent="endScreenFailed"]
position = Vector2( 348.007, 154.822 )
scale = Vector2( 0.821422, 0.821422 )
texture = ExtResource( 8 )

[node name="pants" type="Sprite" parent="endScreenFailed"]
position = Vector2( 344.739, 221.546 )
scale = Vector2( 0.752674, 0.752674 )
texture = ExtResource( 9 )

[node name="torso" type="Sprite" parent="endScreenFailed"]
position = Vector2( 344.917, 220.571 )
scale = Vector2( 0.759061, 0.759061 )
texture = ExtResource( 10 )

[node name="restartButton3" type="TextureButton" parent="endScreenFailed"]
margin_left = 91.9209
margin_top = 498.046
margin_right = 391.921
margin_bottom = 578.046
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
